// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-verification-okta-verify-push-code Polling should display reminder prompt when waiting on page for >= 30 secs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-verify MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-verify"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-verify"
                    >
                      Okta Verify
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                      fill="#00297A"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester@okta1.com"
                    >
                      tester@okta1.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-2"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxWarning MuiAlert-infobox emotion-19"
                          role="alert"
                        >
                          <div
                            class="MuiAlert-icon emotion-20"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-21"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiAlert-message emotion-22"
                          >
                            <div
                              class="MuiBox-root emotion-2"
                            >
                              Haven't received a push notification yet? Try opening the Okta Verify app on your device, or 
                              <a
                                class="MuiTypography-root MuiTypography-monochrome MuiLink-root MuiLink-underlineAlways resend-number-challenge emotion-24"
                                href="#"
                              >
                                resend the push notification
                              </a>
                              .
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-26"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-27"
                          data-se="o-form-head"
                          id="challenge-poll_Title_Push_notification_sent_okta_verify_aut2h3fft4y9pDPCS1d7_2"
                          tabindex="-1"
                        >
                          Push notification sent
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-29"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-30"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-31"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-32"
                              data-indeterminate="false"
                              data-se="autoChallenge"
                              data-se-for-name="autoChallenge"
                              id="autoChallenge"
                              name="autoChallenge"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-33"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-34"
                          >
                            Send push automatically
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-26"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-37"
                          data-se="numberchallenge-instr-value"
                          id="challenge-poll_Description_On_your_mobile_device,_open_the_Okta_Verify_prompt,_then_tap_<span_class=strong>52</span>_in_Okta_Verify_to_continue_okta_verify_aut2h3fft4y9pDPCS1d7_4"
                        >
                          On your mobile device, open the Okta Verify prompt, then tap 
                          <span
                            class="strong"
                          >
                            52
                          </span>
                           in Okta Verify to continue.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-39"
                        id="code"
                      >
                        <div
                          class="MuiBox-root emotion-40"
                          data-se="icon-code"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            height="63"
                            role="img"
                            viewBox="0 0 51 63"
                            width="51"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              Mobile Device
                            </title>
                            <path
                              class="siwIconFillPrimaryDark"
                              clip-rule="evenodd"
                              d="M21.7496 62.7498H44.2496C45.957 62.6872 47.5708 61.9538 48.7409 60.7089C49.9109 59.4639 50.5429 57.8078 50.4996 56.0998V6.99981C50.5564 5.28333 49.9304 3.61435 48.7589 2.35851C47.5874 1.10268 45.9659 0.362378 44.2496 0.299805H21.7496C20.0334 0.362378 18.4119 1.10268 17.2404 2.35851C16.0689 3.61435 15.4429 5.28333 15.4996 6.99981V28.1311H17.9996V6.99981C17.9658 6.47429 18.036 5.94727 18.2063 5.44896C18.3766 4.95065 18.6436 4.49087 18.992 4.09601C19.3404 3.70114 19.7634 3.37896 20.2366 3.14794C20.7098 2.91693 21.224 2.78163 21.7496 2.74981L44.2496 2.7998C45.3021 2.86429 46.2865 3.34172 46.9888 4.12826C47.691 4.91479 48.0543 5.9468 47.9996 6.99981V56.0498C48.0335 56.5753 47.9633 57.1023 47.793 57.6007C47.6227 58.099 47.3557 58.5587 47.0073 58.9536C46.6589 59.3485 46.2359 59.6707 45.7627 59.9017C45.2895 60.1327 44.7753 60.268 44.2496 60.2998H21.7496C20.6972 60.2353 19.7128 59.7579 19.0105 58.9714C18.3082 58.1848 17.9449 57.1528 17.9996 56.0998V34.6311H15.4996V56.0498C15.4429 57.7663 16.0689 59.4353 17.2404 60.6911C18.4119 61.9469 20.0334 62.6872 21.7496 62.7498ZM38 55.25H28V57.75H38V55.25ZM33 5.25C34.3807 5.25 35.5 6.36929 35.5 7.75C35.5 9.13071 34.3807 10.25 33 10.25C31.6193 10.25 30.5 9.13071 30.5 7.75C30.5 6.36929 31.6193 5.25 33 5.25Z"
                              fill="#00297A"
                              fill-rule="evenodd"
                            />
                            <path
                              class="siwIconFillSecondary"
                              clip-rule="evenodd"
                              d="M26.2191 32.6309L20.85 38L22.62 39.76L31 31.38L22.62 23L20.85 24.76L26.2209 30.1309H2.98047V32.6309H26.2191Z"
                              fill="#A7B5EC"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 no-translate emotion-34"
                            data-se="text-code"
                          >
                            52
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-44"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Verify with something else
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-44"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`authenticator-verification-okta-verify-push-code should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-verify MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-verify"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-verify"
                    >
                      Okta Verify
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M32.872 22.853a8.947 8.947 0 1 1-2.288-4.91L24 24.498l-3.205-3.19c-.482-.48-1.322-.48-1.804 0a1.26 1.26 0 0 0-.374.898c0 .34.133.659.374.898l4.107 4.09c.24.239.561.371.902.371.336 0 .664-.136.902-.372L38.636 13.52a18.089 18.089 0 0 0-1.634-1.967A17.947 17.947 0 0 0 24 6C14.059 6 6 14.059 6 24s8.059 18 18 18 18-8.059 18-18c0-2.972-.722-5.775-1.998-8.245l-7.13 7.098Z"
                      fill="#00297A"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="identifier-container MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <span
                      class="MuiBox-root emotion-12"
                    >
                      <svg
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                        fill="none"
                        focusable="false"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <title>
                          User
                        </title>
                      </svg>
                    </span>
                    <span
                      class="identifier no-translate MuiBox-root emotion-14"
                      data-se="identifier"
                      title="tester@okta1.com"
                    >
                      tester@okta1.com
                    </span>
                  </div>
                </div>
                <form
                  class="o-form MuiBox-root emotion-15"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-2"
                    />
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          id="challenge-poll_Title_Push_notification_sent_okta_verify_aut2h3fft4y9pDPCS1d7_2"
                          tabindex="-1"
                        >
                          Push notification sent
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-22"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-23"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-24"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-25"
                              data-indeterminate="false"
                              data-se="autoChallenge"
                              data-se-for-name="autoChallenge"
                              id="autoChallenge"
                              name="autoChallenge"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-26"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-27"
                          >
                            Send push automatically
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-30"
                          data-se="numberchallenge-instr-value"
                          id="challenge-poll_Description_On_your_mobile_device,_open_the_Okta_Verify_prompt,_then_tap_<span_class=strong>52</span>_in_Okta_Verify_to_continue_okta_verify_aut2h3fft4y9pDPCS1d7_4"
                        >
                          On your mobile device, open the Okta Verify prompt, then tap 
                          <span
                            class="strong"
                          >
                            52
                          </span>
                           in Okta Verify to continue.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-32"
                        id="code"
                      >
                        <div
                          class="MuiBox-root emotion-33"
                          data-se="icon-code"
                        >
                          <svg
                            aria-hidden="true"
                            fill="none"
                            height="63"
                            role="img"
                            viewBox="0 0 51 63"
                            width="51"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              Mobile Device
                            </title>
                            <path
                              class="siwIconFillPrimaryDark"
                              clip-rule="evenodd"
                              d="M21.7496 62.7498H44.2496C45.957 62.6872 47.5708 61.9538 48.7409 60.7089C49.9109 59.4639 50.5429 57.8078 50.4996 56.0998V6.99981C50.5564 5.28333 49.9304 3.61435 48.7589 2.35851C47.5874 1.10268 45.9659 0.362378 44.2496 0.299805H21.7496C20.0334 0.362378 18.4119 1.10268 17.2404 2.35851C16.0689 3.61435 15.4429 5.28333 15.4996 6.99981V28.1311H17.9996V6.99981C17.9658 6.47429 18.036 5.94727 18.2063 5.44896C18.3766 4.95065 18.6436 4.49087 18.992 4.09601C19.3404 3.70114 19.7634 3.37896 20.2366 3.14794C20.7098 2.91693 21.224 2.78163 21.7496 2.74981L44.2496 2.7998C45.3021 2.86429 46.2865 3.34172 46.9888 4.12826C47.691 4.91479 48.0543 5.9468 47.9996 6.99981V56.0498C48.0335 56.5753 47.9633 57.1023 47.793 57.6007C47.6227 58.099 47.3557 58.5587 47.0073 58.9536C46.6589 59.3485 46.2359 59.6707 45.7627 59.9017C45.2895 60.1327 44.7753 60.268 44.2496 60.2998H21.7496C20.6972 60.2353 19.7128 59.7579 19.0105 58.9714C18.3082 58.1848 17.9449 57.1528 17.9996 56.0998V34.6311H15.4996V56.0498C15.4429 57.7663 16.0689 59.4353 17.2404 60.6911C18.4119 61.9469 20.0334 62.6872 21.7496 62.7498ZM38 55.25H28V57.75H38V55.25ZM33 5.25C34.3807 5.25 35.5 6.36929 35.5 7.75C35.5 9.13071 34.3807 10.25 33 10.25C31.6193 10.25 30.5 9.13071 30.5 7.75C30.5 6.36929 31.6193 5.25 33 5.25Z"
                              fill="#00297A"
                              fill-rule="evenodd"
                            />
                            <path
                              class="siwIconFillSecondary"
                              clip-rule="evenodd"
                              d="M26.2191 32.6309L20.85 38L22.62 39.76L31 31.38L22.62 23L20.85 24.76L26.2209 30.1309H2.98047V32.6309H26.2191Z"
                              fill="#A7B5EC"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <span
                            class="MuiTypography-root MuiTypography-body1 no-translate emotion-27"
                            data-se="text-code"
                          >
                            52
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Verify with something else
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
